<resources>
    <string name="app_name">CashCo</string>
    <string name="title_activity_inventory">POS Inventory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="customer">Customer Fragment</string>
    <string name="inventory">Inventory Fragment</string>
    <string name="title_activity_new_customer">Register New Customer</string>

    <!-- Payment types -->
    <string-array name="payment_type">
        <item>Cash</item>
        <item>Master Card</item>
        <item>Debit Card</item>
    </string-array>

    <!--User Roles-->
    <string-array name="user_roles">
        <item>Stock Manager</item>
        <item>Cashier</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_cust_tile">Edit Customer</string>
    <string name="btn_edit_customer">Edit</string>
    <string name="btn_cancel_edit_customer">Cancel</string>
    <string name="txt_invoice">Invoice #</string>
    <string name="txt_payment">Pnt. Type</string>
    <string name="txt_customer">Customer</string>
    <string name="txt_recieved">Recieved</string>
    <string name="txt_recievable">Recievable</string>
    <string name="txt_balance_date">Date</string>
    <string name="title_activity_text_drawer">TextDrawerActivity</string>
    <string name="btn_add">Add</string>
    <string name="edit_ctg_name">Category Name</string>
    <string name="edit_ctg_desc">Description (optional)</string>
    <string name="txt_ctg_title">Add New Category</string>
    <string name="img_product_image">Choose Product Image</string>
    <string name="rdb_taxable">Yes</string>
    <string name="rdb_not_taxable">No</string>
    <string name="edit_product_purchase">Purchase Price</string>
    <string name="edit_product_name">Product Name</string>
    <string name="edit_product_desc">Description</string>
    <string name="edit_sell_price">Sell Price</string>
    <string name="edit_product_qty">Product Quantity</string>
    <string name="edit_product_barcode">Barcode Number</string>
    <string name="txt_product_title">Add New Product</string>
    <string name="txt_taxable">Taxable?</string>
    <string name="txt_ctg_for_product">Category</string>
    <string name="txt_product_edit_title">Edit Product</string>
    <string name="txt_ctg_edit_title">Edit Category</string>
    <string name="btn_edit_category">Edit</string>
    <string name="mnu_edit_product">Edit</string>
    <string name="mnu_delete_product">Delete</string>
    <string name="menu_customer">Customers</string>
    <string name="menu_inventory">Inventories</string>
    <string name="menu_category">Categories</string>
    <string name="menu_report">Reports</string>
    <string name="menu_setting">Settings</string>
    <string name="icon_new_customer">Icon of new customer</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_report">Sales Reports</string>
    <string name="tab_text_1">Daily</string>
    <string name="tab_text_2">Weekly</string>
    <string name="tab_text_3">Monthly</string>
    <string name="tab_text_4">Annuall</string>
    <string name="txt_report_image">Image</string>
    <string name="txt_report_customer">Customer</string>
    <string name="txt_report_invoice">Invoice</string>
    <string name="txt_report_qty">Qty</string>
    <string name="txt_report_payment">Payment</string>
    <string name="txt_report_date">Date</string>
    <string name="txt_report_daily_total">Today\'s Total Sales:</string>
    <string name="txt_report_weekly_total">Last week\'s Total Sales:</string>
    <string name="txt_report_monthly_total">Last month\'s Total Sales:</string>
    <string name="txt_report_annual_total">Last year\'s Total Sales:</string>
    <string name="icon_print_report">Icon Print Report</string>
    <string name="mnu_today_report">Today</string>
    <string name="mnu_ysd_report">Yesterday</string>
    <string name="mnu_7d_report">Last 7 days</string>
    <string name="mnu_last30d_report">Last 30 days</string>
    <string name="mnu_this_week_report">This Week</string>
    <string name="mnu_last_week_report">Last Week</string>
    <string name="mnu_this_month_report">This Month</string>
    <string name="mnu_last_month_report">Last Month</string>
    <string name="mnu_this_year_report">This Year</string>
    <string name="mnu_last_year_report">Last Year</string>
    <string name="mnu_all_time_report">All Time</string>
    <string name="mnu_cust_range_report">Custom Date Range</string>
    <string name="txt_report_recieved">Recieved</string>
    <string name="txt_report_recievable">Recievable</string>
    <string name="btn_new_user">New User</string>
    <string name="txt_new_user_header">Add New User</string>
    <string name="users">Users</string>
    <string name="edit_user_fname">First Name</string>
    <string name="edit_user_lname">Last Name</string>
    <string name="edit_user_phone">Phone</string>
    <string name="edit_user_email">Email (optional)</string>
    <string name="edit_user_psd">Password</string>
    <string name="edit_user_pass_confirm">Retype Password</string>
    <string name="btn_add_user">Add User</string>
    <string name="txt_role_header">Set User Role</string>
    <string name="rdb_admin">System Admin</string>
    <string name="rdb_stock_manager">Stock Manager</string>
    <string name="rdb_cashier">Cashier</string>
    <string name="btn_user_set_role">Set Role</string>
</resources>
