<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding"
    android:layout_margin="@dimen/margin"
    android:orientation="vertical"
    tools:context="com.xamuor.cashco.cashco.com.xamuor.cashco.Views.ProductEditFragment">
    <TextView
        android:id="@+id/txt_product_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/txt_product_edit_title"/>
    <EditText
        android:id="@+id/edit_change_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="@dimen/txt_small_size"
        android:maxLines="1"
        android:hint="@string/edit_product_name"/>
    <EditText
        android:id="@+id/edit_change_product_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="@dimen/txt_small_size"
        android:maxLines="1"
        android:hint="@string/edit_product_desc"/>
    <EditText
        android:id="@+id/edit_change_product_purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_small_size"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:hint="@string/edit_product_purchase"/>
    <EditText
        android:id="@+id/edit_change_product_sell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_small_size"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:hint="@string/edit_sell_price"/>
    <EditText
        android:id="@+id/edit_change_product_qty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="@dimen/txt_small_size"
        android:maxLines="1"
        android:hint="@string/edit_product_qty"/>
    <EditText
        android:id="@+id/edit_change_product_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="@dimen/txt_small_size"
        android:maxLines="1"
        android:hint="@string/edit_product_barcode"/>
    <TextView
        android:id="@+id/txt_taxable"
        android:layout_width="wrap_content"
        android:text="@string/txt_taxable"
        android:layout_marginTop="@dimen/small_margin"
        android:textStyle="bold"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/rdg_change_for_tax"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/small_margin"
        android:gravity="center"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rdb_change_taxable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginEnd="50dp"
            android:text="@string/rdb_taxable"/>
        <RadioButton
            android:id="@+id/rdb_not_change_taxable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/rdb_not_taxable"/>
    </RadioGroup>
    <Button
        android:id="@+id/btn_change_product"
        android:layout_width="match_parent"
        android:text="@string/btn_edit_customer"
        android:layout_marginTop="@dimen/margin"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_change_product_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel_edit_customer"/>
</LinearLayout>
