<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        android:layout_margin="@dimen/margin"
        tools:context="com.xamuor.cashco.cashco.NewProductFragment">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/txt_product_title"/>
        <TextView
            android:id="@+id/txt_ctg_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_ctg_for_product"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edit_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:maxLines="1"
            android:hint="@string/edit_product_name"
            android:inputType="text"/>
        <EditText
            android:id="@+id/edit_product_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/edit_product_desc"
            android:inputType="text"/>
        <ImageView
            android:id="@+id/img_product_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:contentDescription="@string/img_product_image"
            android:src="@drawable/ic_add_image"/>
        <EditText
            android:id="@+id/edit_product_purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_product_purchase"
            android:maxLines="1"
            android:inputType="numberDecimal"/>
        <EditText
            android:id="@+id/edit_product_sell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_sell_price"
            android:maxLines="1"
            android:inputType="numberDecimal"/>
        <EditText
            android:id="@+id/edit_product_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_product_qty"
            android:maxLines="1"
            android:inputType="number"/>
        <EditText
            android:id="@+id/edit_product_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_product_barcode"
            android:maxLines="1"
            android:inputType="number"/>
        <TextView
            android:id="@+id/txt_taxable"
            android:layout_width="wrap_content"
            android:text="@string/txt_taxable"
            android:layout_marginTop="@dimen/small_margin"
            android:textStyle="bold"
            android:layout_height="wrap_content" />
            <RadioGroup
                android:id="@+id/rdg_for_tax"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rdb_taxable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_marginEnd="50dp"
                    android:text="@string/rdb_taxable"/>
                <RadioButton
                    android:id="@+id/rdb_not_taxable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/rdb_not_taxable"/>
            </RadioGroup>
        <Button
            android:id="@+id/btn_add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/btn_add"/>
        <Button
            android:id="@+id/btn_cancel_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel_edit_customer"/>
    </LinearLayout>
</ScrollView>

