<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/small_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/txt_new_user_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_new_user_header"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/small_margin"/>
    <EditText
        android:id="@+id/edit_user_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="text"
        android:focusable="true"
        android:nextFocusDown="@id/edit_user_lname"
        android:hint="@string/edit_user_fname"/>
    <EditText
        android:id="@+id/edit_user_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="text"
        android:focusable="true"
        android:nextFocusDown="@id/edit_user_phone"
        android:hint="@string/edit_user_lname"/>
    <EditText
        android:id="@+id/edit_user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="phone"
        android:focusable="true"
        android:nextFocusDown="@id/edit_user_email"
        android:hint="@string/edit_user_phone"/>
    <EditText
        android:id="@+id/edit_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:focusable="true"
        android:nextFocusDown="@id/spn_user_role"
        android:hint="@string/edit_user_email"/>
    <Spinner
        android:id="@+id/spn_user_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:nextFocusDown="@id/edit_user_password"
        android:entries="@array/user_roles"/>
    <EditText
        android:id="@+id/edit_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:focusable="true"
        android:nextFocusDown="@id/edit_user_confirm"
        android:inputType="textPassword"
        android:hint="@string/edit_user_psd"/>
    <EditText
        android:id="@+id/edit_user_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:focusable="true"
        android:nextFocusDown="@id/btn_add_user"
        android:inputType="textPassword"
        android:hint="@string/edit_user_pass_confirm"/>
    <Button
        android:id="@+id/btn_add_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:focusable="true"
        android:nextFocusDown="@id/btn_cancel_user"
        android:text="@string/btn_add_user"/>
    <Button
        android:id="@+id/btn_cancel_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:text="@string/btn_cancel_edit_customer"/>
</LinearLayout>
