<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/padding"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.xamuor.cashco.pos.NewCategoryFragment">
    <TextView
        android:id="@+id/txt_ctg_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_ctg_title"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/edit_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_small_size"
        android:inputType="text"
        android:hint="@string/edit_ctg_name"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/edit_category_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_small_size"
        android:hint="@string/edit_ctg_desc"
        android:inputType="text"
        android:maxLines="1"/>
    <Button
        android:id="@+id/btn_add_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/btn_add"/>
    <Button
        android:id="@+id/btn_cancel_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel_edit_customer"/>
</LinearLayout>
