<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin"
    android:padding="@dimen/padding"
    tools:context="com.xamuor.cashco.pos.DailyReportFragment">
    <ImageView
        android:id="@+id/img_print_weekly_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_print_report"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_print_report"/>
    <TextView
        android:id="@+id/txt_report_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_print_weekly_total"
        android:textStyle="bold"
        android:layout_alignTop="@+id/img_print_weekly_total"
        android:layout_marginBottom="@dimen/margin"/>
    <LinearLayout
        android:id="@+id/report_inner_layout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/txt_report_total"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_report_image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/txt_report_customer"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/txt_report_invoice"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/txt_report_qty"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/txt_report_payment"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/txt_report_date"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/report_rv"
        android:padding="@dimen/padding"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_below="@+id/report_inner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>
