<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin"
    android:padding="@dimen/padding"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:id="@+id/txt_role_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/txt_role_header"/>
        <RadioGroup
            android:id="@+id/rdg_user_role"
            android:layout_width="wrap_content"
            android:layout_below="@+id/txt_role_header"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/small_margin"
            android:weightSum="3"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rdb_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdb_admin"/>
            <RadioButton
                android:id="@+id/rdb_stock_manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdb_stock_manager"/>
            <RadioButton
                android:id="@+id/rdb_cashier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rdb_cashier"/>
        </RadioGroup>
    <Button
        android:id="@+id/btn_set_user_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_user_set_role"
        android:layout_below="@+id/rdg_user_role"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>