<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context="com.xamuor.cashco.cashco.CategoryEditFragment">
    <TextView
        android:id="@+id/txt_ctg_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/txt_ctg_edit_title"/>
    <EditText
        android:id="@+id/edit_change_ctg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/edit_ctg_name"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/edit_change_ctg_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/edit_ctg_desc"
        android:maxLines="1"/>
    <Button
        android:id="@+id/btn_edit_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/btn_edit_category"/>
    <Button
        android:id="@+id/btn_cancel_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit_category"/>
</LinearLayout>
